--- a/source/404.html
+++ b/source/404.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header main-header--nojs ">
+  <header class="main-header main-header--nojs page__header">
     <div class="main-header__logo-wrapper">
       <a class="logo main-header__logo" href="index.html">
         <picture>
