--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
 
 <body class="page__body">
   <header class="index-header">
-    <div class="main-header main-header--nojs index-header__main-header">
+    <div class="main-header main-header--nojs index-header__main-header page__header">
       <div class="main-header__logo-wrapper">
         <a class="logo main-header__logo" href="index.html">
           <picture>
