--- a/source/index.html
+++ b/source/index.html
@@ -13,6 +13,7 @@
   <link rel="preload" href="../fonts/lato/Lato-Regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="../fonts/oswald/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <script src="scripts/index.js" defer></script>
+  <script src="scripts/slider.js" defer></script>
 </head>
 
 <body class="page__body">
