Завершает стилизацию элементов формы

--- a/source/program.html
+++ b/source/program.html
@@ -94,11 +94,11 @@
           <span class="section-subtitle__text">Контактные данные (владельца кота)</span>
         </legend>
         <div class="program-form-contacts__inner-wrapper program-form__container">
-          <label class="program-form__input-wrapper input-control">
-            <span class="program-form__label input-control__label input-control__label--input">E-mail:*</span>
+          <label class="program-form__input-wrapper input-control input-control--email">
+            <span class="program-form__label input-control__label input-control__label--input ">E-mail:*</span>
             <input class="program-form__input input-control__input--email  input-control__input" type="text" name="email" placeholder="kuklachev@gmail.com" required>
           </label>
-          <label class="program-form__input-wrapper input-control">
+          <label class="program-form__input-wrapper input-control  input-control--tel">
             <span class="program-form__label input-control__label input-control__label--input">Телефон:*</span>
             <input class="program-form__input input-control__input--tel input-control__input" type="tel" name="phone" placeholder="8 (960) 900-60-90" required>
           </label>
@@ -109,8 +109,8 @@
         <label class="program-form__subtitle section-subtitle" for="program-form-comment">
           <span class="section-subtitle__text">Комментарий</span>
         </label>
-        <div class="program-form__container">
-          <textarea class="program-form__textarea input-control input-control--textarea" name="comment" id="program-form-comment" placeholder="Расскажите обо всех повадках кота"></textarea>
+        <div class="program-form__container input-control input-control--textarea">
+          <textarea class="program-form__textarea input-control__input" name="comment" id="program-form-comment" placeholder="Расскажите обо всех повадках кота"></textarea>
         </div>
       </div>
 
