Исправляет заголовок Контактов

--- a/source/program.html
+++ b/source/program.html
@@ -91,7 +91,7 @@
 
       <fieldset class="program-form__group program-form__group-contacts">
         <legend class="program-form__subtitle section-subtitle">
-          <span class="section-subtitle__text">Контактные данные (владельца кота)</span>
+          <span class="section-subtitle__text">Контактные данные <br>(владельца кота)</span>
         </legend>
         <div class="program-form__container program-form__group-contacts-inner-wrapper">
           <label class="program-form__input-wrapper input-control input-control--email">
